--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -116,10 +116,16 @@
   flex-direction: row;
 }
 
+.fr.space-between {
+  justify-content: space-between;
+}
+
 .fc {
   display: flex;
   flex-direction: column;
 }
+
+
 
 .aic {
   align-items: center;
